...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator"
        android:orientation="vertical" >

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.polimi.jaj.roarify.activity.HomeActivity">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_action_add"
            android:layout_weight="1" />
...
