<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="220dp"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textMessage"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_below="@id/appbarlayout"
                    android:layout_margin="7dp"
                    android:scrollbars = "vertical"
                    android:ellipsize="end"
                    android:maxLines="4"

                    />
                <TextView
                    android:id="@+id/authorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textMessage"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"


                    />
                <TextView
                    android:id="@+id/distanceMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/authorMessage"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="7dp"

                    />
                <TextView
                    android:id="@+id/timeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/authorMessage"
                    android:layout_alignParentRight="true"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:paddingEnd="5dp"

                    />
                <ImageButton
                    android:id="@+id/deleteButton"
                    android:background="#0000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeMessage"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"
                    card_view:srcCompat="@drawable/trash"
                    />
                <ImageButton
                    android:id="@+id/replyButton"
                    android:background="#0000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeMessage"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    card_view:srcCompat="@drawable/reply_arrow"
                    />
                <ImageButton
                    android:id="@+id/favButton"
                    android:background="#0000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:srcCompat="@drawable/star_fav_no"
                    android:layout_below="@id/timeMessage"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                     />

    </RelativeLayout>

</android.support.v7.widget.CardView>