<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menuTop">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_messages"
            android:icon="@drawable/ic_menu_my_messages"
            android:title="@string/my_messages" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_menu_help_feedback"
            android:title="@string/help_feedback" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/menuBottom">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>
</menu>
